# ai_agents

./: pyproject.toml
Ollama/: 03_market_sentiment_analyzer.ipynb
Prompting/: 01_startup_investment_analysis.ipynb
Prompting excercises/: 03_market_sentiment_analyzer.ipynb  README.md
Reasoning/: llm_reasoning_techniques copy.ipynb  llm_reasoning_techniques.ipynb
