[project]
name = "ai-agents"
version = "0.1.0"
description = "ai agents testing"
authors = [
    {name = "Ivan G",email = "igarc199@itam.mx"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy (>=2.2.2,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
